--- a/index.html
+++ b/index.html
@@ -5,12 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>excursion</title>
   <link rel="stylesheet" href="resources/css/style.css" type="text/css"/>
-
 </head>
+
 <body>
 
   <header>Discover hidden places within the world around you</header>
+  <br>
   <a class="link" href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion(Coming soon)</a>
+  <br>
+  <video autoplay loop muted>
+    <source src="resources/content/excursion.mp4" type="video/mp4">
+  </video>
+
+  <h1>Your personal travel guide</h1>
+  <p>excursian remembers places you like, and recommends new poitns of interest around you<p>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg">
+  <br>
+  <br>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png">
+    
+  <h1>Coming Soon for iPhone and Android</h1>
+  <a class="link" href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion(Coming soon)</a>
+
+<footer>
+  
+
+
+</footer>
+  
+    
+
+  
   
 </body>
 </html>
