--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </video>
 
   <h1>Your personal travel guide</h1>
-  <p>excursian remembers places you like, and recommends new poitns of interest around you<p>
+  <p>Excursian remembers places you like, and recommends new poitns of interest around you<p>
   <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg">
   <br>
   <br>
@@ -28,7 +28,7 @@
   <a class="link" href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html#">Download Excursion(Coming soon)</a>
 
 <footer>
-  
+
 
 
 </footer>
